# specflow

./: README.md  pyproject.toml
examples/plan-demo/: README.md  plan.json  proposal.json
examples/plan-demo/src/: parser.py
examples/plan-demo/tests/: test_parser.py
examples/tdd-demo/: flow.json  verify.py
examples/tdd-demo/src/: parser.py
examples/tdd-demo/tests/: test_parser.py
specflow/: engine.py  hooks.py  mcp.py
tests/: test_plan_flow.py
